--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Web forms</title>
+    <title>Web Forms</title>
   </head>
   <body>
+    <h1>Pet Adoption Application</h1>
+    <form method="get">
+      <label>Your name:
+        <input type="text" name="applicantName">
+      </label>
+<label>Your email:
+      <input type="email" name="applicantEmail">
+      </label>
+      <label for="city">Your city:</label>
+      <input id="city" type="text" name="applicantCity">
+<label>How many pets are in your home currently?
+<input type="number" name="petCount"></label>
 
+      <input type="submit" value="Apply now!">
+    </form>
   </body>
 </html>
