--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
       <label>Your name:
         <input type="text" name="applicantName">
       </label>
-<label>Your email:
+
+      <label>Your email:
       <input type="email" name="applicantEmail">
       </label>
+
       <label for="city">Your city:</label>
       <input id="city" type="text" name="applicantCity">
-<label>How many pets are in your home currently?
-<input type="number" name="petCount"></label>
 
+<label>How many pets are in your home currently?
+<input type="number" name="petCount">
+</label>
+
+<label>Your password:
+<input type="password" name="accountPW"></label>
       <input type="submit" value="Apply now!">
     </form>
   </body>
